Excercise2/SecGrp.tf
resource "aws_security_group" "love-sg" {
  name        = "love-sg"
  description = "love-sg"

  tags = {
    Name = "love-sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "sshfrommyIP" {

  security_group_id = aws_security_group.love-sg.id
  cidr_ipv4         = "49.37.117.141/32"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.love-sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "allowAllOutbound_ipv4" {
  security_group_id = aws_security_group.love-sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

resource "aws_vpc_security_group_egress_rule" "allowAllOutbound_ipv6" {
  security_group_id = aws_security_group.love-sg.id
  cidr_ipv6         = "::/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
